# email-ops-openenv

./: Dockerfile  EMAIL_ASSISTANT_SUMMARY.md  PROXY_FIX_GUIDE.md  PROXY_FIX_SUMMARY.md  PUSH_COMPLETE.md  README.md  README_EMAIL_ASSISTANT.md  SPACE_STATUS_REPORT.md  agentic_evaluation.py  app.py  baseline_agent.py  demo_email_assistant.py  email_assistant.py  env.py  final_evaluation.py  final_evaluation_results.json  graders.py  graders_new.py  human_review_prep.md  inference.py  inference_production.py  models.py  openenv.bat  openenv.yaml  pyproject.toml  requirements.txt  requirements_email.txt  test_basic.py  test_compliance.py  test_email_assistant.py  test_inference.py  test_network.py  test_proxy_fix.py  verify_fix.py
server/: app.py
