[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "email-ops-openenv"
version = "0.1.0"
description = "An OpenEnv environment for email triage automation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["email_ops"]

[project.urls]
Repository = "https://huggingface.co/spaces"
